Fixed spacing with the blog buttons

--- a/WebApplication4/Content/landing-page.css
+++ b/WebApplication4/Content/landing-page.css
@@ -21,10 +21,6 @@ h6 {
     font-weight: 700;
 }
 
-.bettertext {
-    min-height: 75px;
-}
-
 .centertext {
     text-align: center;
 }
